--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("img/texture-paper.png");
+    /* background: url("img/texture-paper.png"); */
     background-size: 280px 280px;
 }
 
@@ -133,7 +133,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: white;
 }
 
 .d-bloc .a-btn:hover,
@@ -302,13 +302,9 @@ a:hover {
 }
 
 .navbar-brand img {
-    max-height: 200px;
-    margin: 0 5px 0 0;
+    height: 70px;
+    margin: 0 5px 0 -15%;
     display: inline;
-}
-
-.navbar-brand img[src$=svg] {
-    min-width: 100px;
 }
 
 .nav-center .navbar-brand img {
@@ -647,11 +643,14 @@ h5,
 h6,
 p,
 label,
-.btn,
-a {
+.btn {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: black;
+}
+a{
+    color: #FFFFFF;
+    font-size: 17px;
 }
 
 .container {
@@ -677,7 +676,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 17px;
 }
 
 .tight-width-whitespace {
@@ -700,8 +699,8 @@ p {
 }
 
 .social {
-    max-width: 400px;
-    margin: auto auto auto auto;
+    max-width: 500px;
+    margin: 4% auto 4% auto;
 }
 
 h2 {
@@ -709,11 +708,23 @@ h2 {
     line-height: 1.4em;
 }
 
-h3 {
+.col-sm-4 h3 {
     font-size: 15px;
     text-transform: uppercase;
+    color: #FFFFFF;
+    margin-bottom: 13%;
+    margin-left: 8%;
+}
+
+
+.col-sm-6 h3
+{
+    
+    text-transform: uppercase;
     font-weight: 700;
-    color: #333333!important;
+    color: #000000;
+    font-size: 15px;
+    
 }
 
 .med-width-whitespace {
@@ -726,9 +737,7 @@ h1 {
     color: #333333!important;
 }
 
-h4 {
-    color: #333333!important;
-}
+
 
 .icons {
     margin-bottom: 14px;
@@ -771,15 +780,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #8c4e31;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF !important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #8c4e31;
     color: #FFFFFF!important;
 }
 
@@ -813,9 +822,9 @@ h4 {
     background-image: url("img/dots-bg.png");
 }
 
-.bg-lines-h2-bg {
+/* .bg-lines-h2-bg {
     background-image: url("img/lines-h2-bg.png");
-}
+} */
 
 .bg-banniere {
     background-image: url("img/agence-la-panthere.jpg");
@@ -823,6 +832,13 @@ h4 {
 
 .bg-presentation {
     background-image: url("img/image-de-presentation.bmp");
+}
+
+.row li
+{
+      list-style-type: none;
+      margin-bottom: 8%;
+      
 }
 
 @media (max-width: 1024px) {
