--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ a:hover {
 
 .navbar .nav {
     padding-top: 2px;
-    margin-right: -16px;
+    margin-right: 10%;
     float: right;
     z-index: 1;
 }
@@ -827,7 +827,7 @@ h1 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation2.webp");
 }
 
 .row li
@@ -857,6 +857,10 @@ h1 {
     }
     .nav-center.navbar .nav {
         max-width: 100%
+    }
+    .navbar-brand img
+    {
+        margin: 0
     }
 }
 
@@ -976,6 +980,7 @@ h1 {
     .navbar-brand img {
         max-height: 40px;
         width: auto;
+        margin: 0;
     }
     .nav-invert .navbar-header {
         float: none;
